# talos

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
book/: notes.ipynb  notes.md
talos/: __init__.py
talos/core/: agents.py  config.py  market.py  simulation.py  visualization.py
talos/examples/: __init__.py
talos/examples/apartment/: __init__.py  agents.py  config.py  market.py  simulation.py  visualization.py
