[project]
name = "talos"
version = "0.1.0"
description = "Apartment market equilibrium simulation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "tqdm>=4.66",
    "plotly>=5.22",
    "matplotlib>=3.9",
    "scipy>=1.12",
    "tinygrad>=0.7",
]

[project.optional-dependencies]
examples = ["textual>=0.48"]
